// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Text> when {bold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "#ef5160",
      },
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {italic} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  italic={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {large} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  large={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      Object {
        "color": "#9b9b9b",
      },
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {lighter} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  lighter={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {primary} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  primary={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {secondary} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  secondary={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {semibold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  semibold={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {small} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  small={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Hello World
</Text>
`;

exports[`<Text> when {tiny} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  tiny={true}
>
  Hello World
</Text>
`;

exports[`<Text> when {title} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  title={true}
>
  Hello World
</Text>
`;
